fix tests + add coverage