@@ -6,20 +6,18 @@
  */
 package org.mule.runtime.module.troubleshooting.internal;
 
-import static java.util.stream.Collectors.toList;
-import static org.hamcrest.Matchers.containsInAnyOrder;
-import static org.hamcrest.Matchers.is;
-import static org.junit.Assert.assertThat;
 import static org.mule.runtime.module.troubleshooting.internal.TestTroubleshootingOperation.REQUIRED_ARGUMENT_NAME;
 import static org.mule.runtime.module.troubleshooting.internal.TestTroubleshootingOperation.TEST_OPERATION_NAME;
 import static org.mule.runtime.module.troubleshooting.internal.TroubleshootingTestUtils.mockApplication;
 import static org.mule.runtime.module.troubleshooting.internal.TroubleshootingTestUtils.mockDeploymentService;
 import static org.mule.runtime.module.troubleshooting.internal.TroubleshootingTestUtils.mockFlowStackEntry;
+import static org.mule.runtime.module.troubleshooting.internal.operations.BasicInfoOperation.BASIC_INFO_OPERATION_NAME;
 import static org.mule.runtime.module.troubleshooting.internal.operations.EventDumpOperation.EVENT_DUMP_OPERATION_NAME;
 
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.containsInAnyOrder;
+import static org.hamcrest.collection.IsIterableWithSize.iterableWithSize;
+
 import org.mule.runtime.core.api.event.EventContextService.FlowStackEntry;
 import org.mule.runtime.deployment.model.api.application.Application;
 import org.mule.runtime.module.deployment.api.DeploymentService;
@@ -29,6 +27,10 @@ import org.mule.runtime.module.troubleshooting.api.TroubleshootingOperationExcep
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+
+import org.junit.After;
+import org.junit.Before;
+import org.junit.Test;
 
 public class DefaultTroubleshootingServiceTestCase {
 
@@ -52,10 +54,12 @@ public class DefaultTroubleshootingServiceTestCase {
   @Test
   public void checkOperations() {
     List<TroubleshootingOperationDefinition> availableOperations = troubleshootingService.getAvailableOperations();
-    assertThat(availableOperations.size(), is(2));
 
-    List<String> operationNames = availableOperations.stream().map(TroubleshootingOperationDefinition::getName).collect(toList());
-    assertThat(operationNames, containsInAnyOrder(EVENT_DUMP_OPERATION_NAME, TEST_OPERATION_NAME));
+    assertThat(availableOperations.stream().map(TroubleshootingOperationDefinition::getName).toList().toString(),
+               availableOperations, iterableWithSize(3));
+
+    List<String> operationNames = availableOperations.stream().map(TroubleshootingOperationDefinition::getName).toList();
+    assertThat(operationNames, containsInAnyOrder(BASIC_INFO_OPERATION_NAME, EVENT_DUMP_OPERATION_NAME, TEST_OPERATION_NAME));
   }
 
   @Test(expected = TroubleshootingOperationException.class)
